src/rplsd/psdl/PSDLParser.java
// Generated from PSDL.g4 by ANTLR 4.4
package rplsd.psdl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PSDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__32=1, T__31=2, T__30=3, T__29=4, T__28=5, T__27=6, T__26=7, T__25=8, 
		T__24=9, T__23=10, T__22=11, T__21=12, T__20=13, T__19=14, T__18=15, T__17=16, 
		T__16=17, T__15=18, T__14=19, T__13=20, T__12=21, T__11=22, T__10=23, 
		T__9=24, T__8=25, T__7=26, T__6=27, T__5=28, T__4=29, T__3=30, T__2=31, 
		T__1=32, T__0=33, INT=34, WS=35, ID=36;
	public static final String[] tokenNames = {
		"<INVALID>", "'from'", "'radius'", "'\n'", "','", "'-'", "'gravity'", 
		"'line'", "'('", "'triangle'", "'force'", "'angle'", "'to'", "'{'", "'size'", 
		"'friction'", "'}'", "'objects'", "'is'", "'velocity'", "'.'", "')'", 
		"'shape'", "'='", "'object'", "'height'", "'elasticity'", "'circle'", 
		"'at'", "'rect'", "'world'", "'model'", "'end'", "'width'", "INT", "WS", 
		"ID"
	};
	public static final int
		RULE_model = 0, RULE_newline = 1, RULE_modelName = 2, RULE_real = 3, RULE_vector = 4, 
		RULE_point = 5, RULE_declarations = 6, RULE_basicShape = 7, RULE_circle = 8, 
		RULE_rectangle = 9, RULE_triangle = 10, RULE_line = 11, RULE_shape = 12, 
		RULE_object = 13, RULE_objectProperty = 14, RULE_elasticity = 15, RULE_friction = 16, 
		RULE_force = 17, RULE_initVelocity = 18, RULE_objectCreation = 19, RULE_worldProperty = 20, 
		RULE_width = 21, RULE_height = 22, RULE_gravity = 23, RULE_world = 24;
	public static final String[] ruleNames = {
		"model", "newline", "modelName", "real", "vector", "point", "declarations", 
		"basicShape", "circle", "rectangle", "triangle", "line", "shape", "object", 
		"objectProperty", "elasticity", "friction", "force", "initVelocity", "objectCreation", 
		"worldProperty", "width", "height", "gravity", "world"
	};

	@Override
	public String getGrammarFileName() { return "PSDL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PSDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public ModelNameContext name;
		public WorldContext world() {
			return getRuleContext(WorldContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public ModelNameContext modelName() {
			return getRuleContext(ModelNameContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(T__2);
			setState(51); ((ModelContext)_localctx).name = modelName();
			setState(52); newline();
			setState(53); declarations();
			setState(54); world();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewlineContext extends ParserRuleContext {
		public NewlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newline; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitNewline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NewlineContext newline() throws RecognitionException {
		NewlineContext _localctx = new NewlineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_newline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56); match(T__30);
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__30 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelNameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PSDLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PSDLParser.ID, i);
		}
		public ModelNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitModelName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelNameContext modelName() throws RecognitionException {
		ModelNameContext _localctx = new ModelNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_modelName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(62); match(T__13);
				setState(63); match(ID);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RealContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(PSDLParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(PSDLParser.INT, i);
		}
		public RealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitReal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealContext real() throws RecognitionException {
		RealContext _localctx = new RealContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_real);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if (_la==T__28) {
				{
				setState(69); match(T__28);
				}
			}

			setState(76);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(73);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(72); match(INT);
					}
				}

				setState(75); match(T__13);
				}
				break;
			}
			setState(78); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VectorContext extends ParserRuleContext {
		public RealContext size;
		public RealContext angle;
		public RealContext real(int i) {
			return getRuleContext(RealContext.class,i);
		}
		public List<RealContext> real() {
			return getRuleContexts(RealContext.class);
		}
		public VectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vector; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitVector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VectorContext vector() throws RecognitionException {
		VectorContext _localctx = new VectorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(T__19);
			setState(81); ((VectorContext)_localctx).size = real();
			setState(82); match(T__22);
			setState(83); ((VectorContext)_localctx).angle = real();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PointContext extends ParserRuleContext {
		public RealContext x;
		public RealContext y;
		public RealContext real(int i) {
			return getRuleContext(RealContext.class,i);
		}
		public List<RealContext> real() {
			return getRuleContexts(RealContext.class);
		}
		public PointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_point; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitPoint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PointContext point() throws RecognitionException {
		PointContext _localctx = new PointContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_point);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); match(T__25);
			setState(86); ((PointContext)_localctx).x = real();
			setState(87); match(T__29);
			setState(88); ((PointContext)_localctx).y = real();
			setState(89); match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ShapeContext shape(int i) {
			return getRuleContext(ShapeContext.class,i);
		}
		public List<ShapeContext> shape() {
			return getRuleContexts(ShapeContext.class);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11 || _la==T__9) {
				{
				setState(93);
				switch (_input.LA(1)) {
				case T__11:
					{
					setState(91); shape();
					}
					break;
				case T__9:
					{
					setState(92); object();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicShapeContext extends ParserRuleContext {
		public CircleContext circle() {
			return getRuleContext(CircleContext.class,0);
		}
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public TriangleContext triangle() {
			return getRuleContext(TriangleContext.class,0);
		}
		public RectangleContext rectangle() {
			return getRuleContext(RectangleContext.class,0);
		}
		public BasicShapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicShape; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitBasicShape(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicShapeContext basicShape() throws RecognitionException {
		BasicShapeContext _localctx = new BasicShapeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_basicShape);
		try {
			setState(102);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); circle();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); triangle();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(100); rectangle();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 4);
				{
				setState(101); line();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircleContext extends ParserRuleContext {
		public PointContext center;
		public RealContext radius;
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public CircleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circle; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitCircle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CircleContext circle() throws RecognitionException {
		CircleContext _localctx = new CircleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_circle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(T__6);
			setState(105); match(T__5);
			setState(106); ((CircleContext)_localctx).center = point();
			setState(107); match(T__31);
			setState(108); ((CircleContext)_localctx).radius = real();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RectangleContext extends ParserRuleContext {
		public PointContext p1;
		public PointContext p2;
		public List<PointContext> point() {
			return getRuleContexts(PointContext.class);
		}
		public PointContext point(int i) {
			return getRuleContext(PointContext.class,i);
		}
		public RectangleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rectangle; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitRectangle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RectangleContext rectangle() throws RecognitionException {
		RectangleContext _localctx = new RectangleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_rectangle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(T__4);
			setState(111); match(T__32);
			setState(112); ((RectangleContext)_localctx).p1 = point();
			setState(113); match(T__21);
			setState(114); ((RectangleContext)_localctx).p2 = point();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriangleContext extends ParserRuleContext {
		public PointContext p1;
		public PointContext p2;
		public PointContext p3;
		public List<PointContext> point() {
			return getRuleContexts(PointContext.class);
		}
		public PointContext point(int i) {
			return getRuleContext(PointContext.class,i);
		}
		public TriangleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triangle; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitTriangle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TriangleContext triangle() throws RecognitionException {
		TriangleContext _localctx = new TriangleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_triangle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(T__24);
			setState(117); ((TriangleContext)_localctx).p1 = point();
			setState(118); ((TriangleContext)_localctx).p2 = point();
			setState(119); ((TriangleContext)_localctx).p3 = point();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public PointContext p1;
		public PointContext p2;
		public List<PointContext> point() {
			return getRuleContexts(PointContext.class);
		}
		public PointContext point(int i) {
			return getRuleContext(PointContext.class,i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(T__26);
			setState(122); match(T__32);
			setState(123); ((LineContext)_localctx).p1 = point();
			setState(124); match(T__21);
			setState(125); ((LineContext)_localctx).p2 = point();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShapeContext extends ParserRuleContext {
		public Token name;
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public List<BasicShapeContext> basicShape() {
			return getRuleContexts(BasicShapeContext.class);
		}
		public BasicShapeContext basicShape(int i) {
			return getRuleContext(BasicShapeContext.class,i);
		}
		public TerminalNode ID() { return getToken(PSDLParser.ID, 0); }
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public ShapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitShape(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShapeContext shape() throws RecognitionException {
		ShapeContext _localctx = new ShapeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_shape);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(T__11);
			setState(128); ((ShapeContext)_localctx).name = match(ID);
			setState(129); match(T__15);
			setState(130); newline();
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131); basicShape();
				setState(132); newline();
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__26) | (1L << T__24) | (1L << T__6) | (1L << T__4))) != 0) );
			setState(138); match(T__1);
			setState(139); newline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public Token name;
		public Token shapeName;
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public ObjectPropertyContext objectProperty(int i) {
			return getRuleContext(ObjectPropertyContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(PSDLParser.ID); }
		public List<ObjectPropertyContext> objectProperty() {
			return getRuleContexts(ObjectPropertyContext.class);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public TerminalNode ID(int i) {
			return getToken(PSDLParser.ID, i);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(T__9);
			setState(142); ((ObjectContext)_localctx).name = match(ID);
			setState(143); match(T__15);
			setState(144); newline();
			setState(145); match(T__11);
			setState(146); match(T__10);
			setState(147); ((ObjectContext)_localctx).shapeName = match(ID);
			setState(148); newline();
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << T__18) | (1L << T__14) | (1L << T__7))) != 0)) {
				{
				{
				setState(149); objectProperty();
				setState(150); newline();
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157); match(T__1);
			setState(158); newline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectPropertyContext extends ParserRuleContext {
		public ForceContext force() {
			return getRuleContext(ForceContext.class,0);
		}
		public ElasticityContext elasticity() {
			return getRuleContext(ElasticityContext.class,0);
		}
		public FrictionContext friction() {
			return getRuleContext(FrictionContext.class,0);
		}
		public InitVelocityContext initVelocity() {
			return getRuleContext(InitVelocityContext.class,0);
		}
		public ObjectPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectProperty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitObjectProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectPropertyContext objectProperty() throws RecognitionException {
		ObjectPropertyContext _localctx = new ObjectPropertyContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_objectProperty);
		try {
			setState(164);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(160); elasticity();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(161); friction();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 3);
				{
				setState(162); force();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(163); initVelocity();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElasticityContext extends ParserRuleContext {
		public RealContext value;
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public ElasticityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elasticity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitElasticity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElasticityContext elasticity() throws RecognitionException {
		ElasticityContext _localctx = new ElasticityContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_elasticity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); match(T__7);
			setState(167); match(T__10);
			setState(168); ((ElasticityContext)_localctx).value = real();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FrictionContext extends ParserRuleContext {
		public RealContext value;
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public FrictionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_friction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitFriction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FrictionContext friction() throws RecognitionException {
		FrictionContext _localctx = new FrictionContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_friction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); match(T__18);
			setState(171); match(T__10);
			setState(172); ((FrictionContext)_localctx).value = real();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForceContext extends ParserRuleContext {
		public VectorContext value;
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public ForceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_force; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitForce(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForceContext force() throws RecognitionException {
		ForceContext _localctx = new ForceContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_force);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(T__23);
			setState(175); match(T__10);
			setState(176); ((ForceContext)_localctx).value = vector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitVelocityContext extends ParserRuleContext {
		public VectorContext value;
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public InitVelocityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initVelocity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitInitVelocity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitVelocityContext initVelocity() throws RecognitionException {
		InitVelocityContext _localctx = new InitVelocityContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_initVelocity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); match(T__14);
			setState(179); match(T__10);
			setState(180); ((InitVelocityContext)_localctx).value = vector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectCreationContext extends ParserRuleContext {
		public Token type;
		public PointContext pos;
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public TerminalNode ID() { return getToken(PSDLParser.ID, 0); }
		public NewlineContext newline() {
			return getRuleContext(NewlineContext.class,0);
		}
		public ObjectCreationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectCreation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSDLVisitor ) return ((PSDLVisitor<? extends T>)visitor).visitObjectCreation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectCreationContext objectCreation() throws RecognitionException {
		ObjectCreationContext _localctx = new ObjectCreationContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_objectCreation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_la = _input.LA(1);
			if (_la==T__30) {
				{
				setState(182); newline();
				}
			}

			setState(185); ((ObjectCreationContext)_localctx).type = match(ID);
			setState(186); match(T__5);
			setState(187); ((ObjectCreationContext)_localctx).pos = point();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
